[package]
name = "sec-store"
version = "1.0.0-alpha.1"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/sec-store"
description = "Simple encrypted storage"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]

[dependencies.ring]
version = "0.17.0-alpha.7"
